# Gossip_Mesh

./: CMakeLists.txt  README.md
dashboard/: README.md  index.html  package.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/components/: ConnectedDevices.tsx  DeviceModal.tsx  DeviceTable.tsx  SystemMetrics.tsx
dashboard/src/contexts/: DeviceContext.tsx  MyStatsContext.tsx
eixam-dashboard-main/src/: Dashboard.css  Dashboard.tsx  index.css  types.ts  vite-env.d.ts
eixam-dashboard-main/src/components/: ChatButton.tsx  PieChart.tsx
eixam-dashboard-main/src/services/: api.ts
script/: job.lua
src/: Algorithm.hpp  IPC.hpp  Network.cpp  Network.hpp  Orchestrator.cpp  Orchestrator.hpp  Peer-server.old  Resources.cpp  Resources.hpp  Script.cpp  Script.hpp  Server.hpp  Sever.cpp  codisecret.py  extern.hpp  main.cpp  receiversecret.py
